[aliases]
test = pytest

[tool.isort]
profile = "black"
multi_line_output = 3

[tool:pytest]
# ignore certain folders and pytest warnings
addopts =
    --ignore build_tools  # ignore build_tools folder
    --ignore examples  # ignore examples folder
    --ignore docs  # ignore docs folder
    --doctest-modules  # run doctests in all .py modules
    --durations 20  # report the top 20 slowest tests
    --timeout 600  # timeout any test after 10 minutes
    --cov sktime  # measure coverage for sktime package
    --cov-report xml  # create xml report in coverage folder
    --cov-report html  # create html report in htmlcov folder
    --showlocals  # show local variables in tracebacks
    --matrixdesign True  # run tests in matrix design
    -n auto  # run tests in parallel
    -m 'not datadownload'  # skip tests that download data
    -n auto
filterwarnings =
    ignore::UserWarning
    ignore:numpy.dtype size changed
    ignore:numpy.ufunc size changed

[flake8]
# Default flake8 3.5 ignored flags
ignore = E121, E123, E126, E226, E24, E704, W503, W504
# inline with Black code formatter
max-line-length = 88
exclude =
    sktime/_contrib/*
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[check-manifest]
ignore =
    .binder/**
    .all-contributorsrc
    .coveragerc
    examples/**
    build_tools/**
    __check_build/**
    docs/**
    Makefile
    CODEOWNERS
    CONTRIBUTING.md
    *.yaml
    *.yml

[isort]
profile = black

[pydocstyle]
convention = numpy
match = (?!test_).*\.py

[bdist_wheel]
universal = false

[sdist]
formats = gztar
