[aliases]
test = pytest

[tool:pytest]
# ignore certain folders and pytest warnings
addopts =
    --ignore build_tools
    --ignore examples
    --ignore docs
    --durations 20
    --timeout 600
    --showlocals
    --matrixdesign True
    --only_changed_modules True
    -n auto
filterwarnings =
    ignore::UserWarning
    ignore:numpy.dtype size changed
    ignore:numpy.ufunc size changed

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[check-manifest]
ignore =
    .binder/**
    .all-contributorsrc
    .coveragerc
    examples/**
    build_tools/**
    __check_build/**
    docs/**
    Makefile
    CODEOWNERS
    CONTRIBUTING.md
    *.yaml
    *.yml

[bdist_wheel]
universal = false

[sdist]
formats = gztar
